# AI-Pet-Companion-

./: .env.example  .gitignore  AGENTS.md  Desktop Start.bat  INSTALL.bat  Multi LLM Improvizaion v2.md  Multi LLM Improvizaion.txt  NeuraClaw_Elevation_Blueprint_v3.md  NeuraClaw_Executive_Summary.md  README.md  ROADMAP.md  SOUL.md  START.bat  Steps.txt  Webapp Start.bat  build_sidecar.bat  build_tauri.bat  config.example.yaml  copy-models.js  dev.bat  inspect_glb.js  neuraclaw-sidecar-x86_64-pc-windows-msvc.spec  pull.bat  pyproject.toml  scratch_download.py  ship.bat
.claude/: settings.local.json
backend/tests/: test_actions.py  test_agent.py  test_api_skills.py  test_db.py  test_gate.py  test_journal.py  test_mcp.py  test_memory.py  test_memory_graph.py  test_models_discovery.py  test_mood.py  test_proactive_engage_xp.py  test_router.py  test_scheduler_idempotent.py  test_settings.py  test_spotify.py  test_synapse.py  test_tools.py  test_tooltags.py  test_vision.py  (+2 more)
docs/: ARCHITECTURE-WORLD.md  AUTONOMY-PHASE1.md  BUILD-PLAN-v0.2.md  BUILD-PLAN-v0.3-WORLD.md  COUNCIL-SYNTHESIS.md  EYEBALL-CHECKLIST.md  GEMINI-BUILD-PROMPT.md  PRD.md  REALMS-DESIGN.md  ROADMAP.md  SIGHT-AND-VOICE.md  WORLD-BIBLE.md  WORLD-REVIEW.md  WORLD-VILLAGE.md
frontend/: compress.cjs  convert.bat  convert.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
migrations/: 001_init.sql  002_memory_notes.sql  003_skills_jobs_approvals.sql  004_pet_xp.sql  005_spotify_oauth.sql  006_tasks_calendar.sql  007_documents.sql  008_autonomy.sql
(+330 files in other folders)
