[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "neuraclaw"
version = "3.0.0a0"
description = "NeuraClaw V3 - personal AI workspace and autonomous agent platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
src = ["backend/src"]
